Настроил docker-compose и завел ларку

--- a/docker/nginx/nginx.conf.template
+++ b/docker/nginx/nginx.conf.template
@@ -3,7 +3,7 @@ events {}
 http {
     server {
         listen 80;
-        server_name ${APP_NAME};
+        server_name ${APP_URL};
         root /var/www/html/${APP_PATH}/public;
         index index.php index.html index.htm;
 
