--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,9 @@ services:
     build:
       context: docker/php84
       dockerfile: Dockerfile
+    env_file:
+      - .env
+      - app/.env
     volumes:
       - "./app:/var/www/html/${APP_PATH}"
       - ./docker/php84/logs:/tmp
@@ -36,12 +39,16 @@ services:
     container_name: nginx_container
     restart: always
     volumes:
-      - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./docker/nginx/nginx.conf.template:/etc/nginx/templates/nginx.conf.template
       - "./app:/var/www/html/${APP_PATH}"
       - ./docker/nginx/logs:/var/log/nginx
     ports:
       - "${NGINX_HTTP_PORT}:80"
       - "${NGINX_HTTPS_PORT}:443"
+    environment:
+      - APP_URL=${APP_SERVER_URL}
+      - APP_PATH=${APP_PATH}
+    command: [ "sh", "-c", "apk add --no-cache gettext >/dev/null && envsubst '$$APP_URL $$APP_PATH' < /etc/nginx/templates/nginx.conf.template > /etc/nginx/nginx.conf && exec nginx -g 'daemon off;'" ]
     networks:
       - app_network
 
