--- a/app/package.json
+++ b/app/package.json
@@ -27,6 +27,7 @@
         "typescript-eslint": "^8.23.0"
     },
     "dependencies": {
+        "bootstrap": "^5.3.2",
         "@inertiajs/react": "^2.3.7",
         "@tailwindcss/vite": "^4.1.11",
         "@types/react": "^19.2.0",
