--- a/docker/nginx/nginx.conf.template
+++ b/docker/nginx/nginx.conf.template
@@ -1,18 +1,36 @@
 events {}
 
 http {
+    include /etc/nginx/mime.types;
+    types {
+        text/css css;
+        application/javascript js mjs;
+    }
+    default_type application/octet-stream;
+
     server {
         listen 80;
         server_name ${APP_URL};
         root /var/www/html/${APP_PATH}/public;
+
+        add_header X-Frame-Options "SAMEORIGIN";
+        add_header X-Content-Type-Options "nosniff";
+
         index index.php index.html index.htm;
 
-
-        location / {
-                try_files $uri $uri/ /index.php?$query_string;
+        # serve static assets with proper types and caching
+        location ~* \.(css|js|png|jpg|jpeg|gif|svg|ico|map)$ {
+            try_files $uri =404;
+            access_log off;
+            expires max;
+            add_header Cache-Control "public, max-age=31536000, immutable";
         }
 
-        location ~ \.php {
+        location / {
+            try_files $uri $uri/ /index.php?$query_string;
+        }
+
+        location ~ \.php$ {
             fastcgi_split_path_info  ^(.+\.php)(.*)$;
             set $fsn /index.php;
             if (-f $document_root$fastcgi_script_name){
@@ -23,7 +41,7 @@ http {
             fastcgi_param  SCRIPT_FILENAME  $document_root$fsn;
 
             # PATH_INFO и PATH_TRANSLATED могут быть опущены, но стандарт RFC 3875 определяет для CGI
-                fastcgi_param  PATH_INFO        $fastcgi_path_info;
+            fastcgi_param  PATH_INFO        $fastcgi_path_info;
             fastcgi_param  PATH_TRANSLATED  $document_root/index.php;
         }
 
