--- a/docker/php84/Dockerfile
+++ b/docker/php84/Dockerfile
@@ -51,10 +51,10 @@ RUN rm -rf /var/cache/apk/*
 
 ENV PATH="$PATH:/root/.composer/vendor/bin"
 
-RUN cd /var/www/html/${APP_PATH}/app
+RUN cd "/var/www/html/${APP_PATH}/app"
 RUN php artisan key generate
 RUN composer install
 RUN npm i
 RUN npm run build
 
-WORKDIR /var/www/html/${APP_PATH}
+WORKDIR "/var/www/html/${APP_PATH}"
